src/objects/testInCountry1__ACMN_Logger_Setting__mdt.object
<CustomObject>
    <description>Settings to manage ACMN Logger</description>
    <fields>
        <fullName>testInCountry1__Custom_Logger_Class__c</fullName>
        <description>Used to define a custom logger extension class.</description>
        <inlineHelpText>Used to define a custom logger extension class.</inlineHelpText>
        <label>Logger Service Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>testInCountry1__Custom_Permission_API_Name__c</fullName>
        <description>The API name of the custom permission required for the service</description>
        <inlineHelpText>The API name of the custom permission required for this service</inlineHelpText>
        <label>Custom Permission API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Description__c</fullName>
        <description>Logging Service description</description>
        <inlineHelpText>Describe your service</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Toggle the logging feature on or off</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Use_Custom_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to define whether the service enforces the use of the Custom Permission ACMN_Logging_Enabled</description>
        <inlineHelpText>Check this box if you only want this service to log for users assigned the custom permission: ACMN_Logging_Enabled (either by profile or by permission set to users)</inlineHelpText>
        <label>Use Custom Permissions</label>
        <type>Checkbox</type>
    </fields>
    <label>ACMN Logger Setting</label>
    <pluralLabel>ACMN Logger Settings</pluralLabel>
</CustomObject>